--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "postinstall": "webpack -p", 
     "eject": "react-scripts eject"
   }
 }
